--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -46,6 +46,7 @@
         <div class="space-y-1 p-2">
           <%= nav_link t("shared.navigation.edit_profile"), edit_user_registration_path, icon: "🔐" %>
           <%= nav_link t("shared.navigation.pending_invitations"), user_invitations_path, icon: current_user.organization_invitations.count.to_s %>
+          <%= nav_link t("shared.navigation.pending_requests"), user_membership_requests_path, icon: current_user.organization_requests.count.to_s %>
         </div>
       </div>
     <% end %>
