--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, t("organizations.edit.title") %>
 
-<%= turbo_frame_tag "dialog_content" do %>
+<%= render "shared/dialog" do %>
   <%= render PageComponent.new(title: t("organizations.edit.title"), content_container: false, full_width: false) do |component| %>
     <%= render "form", organization: @organization %>
   <% end %>
