--- a/app/views/shared/_dialog.html.erb
+++ b/app/views/shared/_dialog.html.erb
@@ -1,23 +1,13 @@
-<dialog class="du-modal" data-dialog-target="dialog" data-action="click->dialog#backdropClick turbo:submit-end->dialog#submitEnd">
-  <div class="du-modal-box">
-  <button type="button" data-action="dialog#close" class="absolute right-4 top-4 du-btn du-btn-ghost du-btn-sm">
-    <%= inline_svg_tag "svg/x-mark.svg", class: "size-6 pointer-events-none" %>
-  </button>
-    <%= turbo_frame_tag "dialog_content", data: { dialog_target: "content" } %>
-  </div>
-</dialog>
-
-<template data-dialog-target="loadingTemplate">
-  <div class="animate-pulse">
-    <div class="flex-1 space-y-6 py-1">
-      <div class="h-2 bg-gray-300 rounded w-1/2"></div>
-      <div class="space-y-3">
-        <div class="grid grid-cols-3 gap-4">
-          <div class="h-2 bg-gray-300 rounded col-span-2"></div>
-          <div class="h-2 bg-gray-300 rounded col-span-1"></div>
-        </div>
-        <div class="h-2 bg-gray-300 rounded"></div>
-      </div>
+<%= turbo_frame_tag :modal do %>
+  <dialog class="du-modal" data-controller="dialog" data-action="click->dialog#clickOutside turbo:submit-end->dialog#submitEnd">
+    <div class="du-modal-box">
+      <form method="dialog">
+        <button class="du-btn">Close</button>
+      </form>
+      <button type="button" data-action="dialog#close" class="absolute right-4 top-4 du-btn du-btn-ghost du-btn-sm">
+        <%= inline_svg_tag "svg/x-mark.svg", class: "size-6 pointer-events-none" %>
+      </button>
+      <%= yield %>
     </div>
-  </div>
-</template>
+  </dialog>
+<% end %>
