--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, t("organizations.new.title") %>
 
-<%= render "shared/dialog" do %>
+<%= render "shared/modal" do %>
   <%= render PageComponent.new(title: t("organizations.new.title")) do |component| %>
     <%= render "form", organization: @organization %>
   <% end %>
