--- a/app/views/organizations/projects/edit.html.erb
+++ b/app/views/organizations/projects/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <%= render "shared/modal" do %>
+  <%= modal do %>
     <h1 class="font-bold text-lx lg:text-3xll">Editing project</h1>
 
     <%= render "form", project: @project %>
