--- a/app/views/organizations/transfers/show.html.erb
+++ b/app/views/organizations/transfers/show.html.erb
@@ -1,4 +1,4 @@
-<%= render "shared/modal" do %>
+<%= modal do %>
   <%= render PageComponent.new(title: t(".title"), content_container: false, full_width: false) do |component| %>
     <%= render "organizations/transfers/form" %>
   <% end %>
