--- a/app/views/public/organizations/show.html.erb
+++ b/app/views/public/organizations/show.html.erb
@@ -1,5 +1,7 @@
 <% content_for :title, t(".title") %>
 
-<%= render PageComponent.new(title: @organization.name) do |component| %>
-  <%= render "public/organizations/organization", organization: @organization %>
+<%= modal do %>
+  <%= render PageComponent.new(title: @organization.name) do |component| %>
+    <%= render "public/organizations/organization", organization: @organization %>
+  <% end %>
 <% end %>
