--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -13,7 +13,7 @@
         <%= active_link_to "🌏", public_organizations_path, title: t("shared.navigation.discover"), class_active: "du-btn-active", class: "du-btn du-btn-ghost" %>
         <%= active_link_to "🏠", organizations_path, active: :exclusive, title: t("organizations.index.title"), class_active: "du-btn-active", class: "du-btn du-btn-ghost p-0" %>
         <div class="flex flex-col items-center space-y-1">
-          <% current_user.organizations.each do |organization| %>
+          <% Current.organizations.each do |organization| %>
             <%= active_link_to organization_path(organization, redirect_to: organization_dashboard_path(organization)), title: organization.name, class_active: "bg-primary", class: "flex items-center space-x-2 text-sm rounded-md border-4 border-transparent hover:border-primary hover:bg-primary" do %>
               <%= organization_avatar(organization) %>
             <% end %>
@@ -33,7 +33,7 @@
         </div>
         <div class="border-t space-y-1 p-2">
           <%= nav_link t("organizations.memberships.index.title"), organization_memberships_path(current_organization), icon: "svg/user-group.svg" %>
-          <% if @current_membership.admin? %>
+          <% if Current.membership.admin? %>
             <%= nav_link t("organizations.subscriptions.index.title"), organization_subscriptions_path(current_organization), icon: subscription_status_label(current_organization) if Rails.application.credentials.dig(:stripe, :private_key).present? %>
             <%= nav_link t("organizations.show.title"), organization_path(current_organization), icon: "svg/cog-6-tooth.svg", active: [ [ "organizations" ], [ "edit", "show" ] ] %>
           <% end %>
