--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full bg-base-100 text-base-content">
+<html lang="en" class="h-full bg-base-300 text-base-content">
   <head>
     <%= render "layouts/head" %>
   </head>
@@ -21,7 +21,7 @@
           <%= render "shared/flash" %>
         </div>
       </header>
-      <main class="flex-grow p-4 lg:p-6">
+      <main class="flex-grow p-2 lg:p-4 lg:m-2 lg:mt-0 lg:rounded-lg lg:border border-neutral-content/20 bg-base-100">
         <%= yield %>
       </main>
       <% if signed_in? %>
