--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -22,11 +22,11 @@
         <% end %>
         <%= inline_svg_tag "svg/chevron-up-down.svg", class: "w-4 h-4 stroke-2 transition-transform duration-200" %>
       </summary>
-      <div class="space-y-1 p-2 border-b border-neutral-content/20">
+      <div class="space-y-1 p-2 border-b border-base-content/20">
         <%= nav_link t("organizations.index.title"), organizations_path, icon: "🏠", active: :exclusive %>
         <%= nav_link t("shared.navigation.discover"), public_organizations_path, icon: "🧭" %>
       </div>
-      <div class="space-y-1 p-2 border-b border-neutral-content/20">
+      <div class="space-y-1 p-2 border-b border-base-content/20">
         <% Current.organizations.excluding(current_organization).each do |organization| %>
           <%= nav_link organization.name, organization_dashboard_path(organization), icon: organization_avatar(organization, classes: "size-5") %>
         <% end %>
@@ -40,7 +40,7 @@
     <% end %>
   </div>
 
-  <div class="border-t space-y-1 p-2 border-neutral-content/20">
+  <div class="border-t space-y-1 p-2 border-base-content/20">
     <% if current_organization %>
       <%= nav_link t("organizations.memberships.index.title"), organization_memberships_path(current_organization), icon: "svg/user-group.svg" %>
       <% if Current.membership.admin? %>
