--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,14 +14,14 @@
       <% end %>
     <% end %>
 
-    <div class="flex-grow flex flex-col">
+    <div class="flex-grow flex flex-col bg-base-300">
       <header class="sticky z-30 top-0">
         <%= render "shared/navbar" %>
         <div id="flash" class="absolute right-4 z-40 flex flex-col items-end">
           <%= render "shared/flash" %>
         </div>
       </header>
-      <main class="flex-grow p-2 lg:p-4 lg:m-2 lg:mt-0 lg:ml-0 lg:rounded-lg lg:border border-base-content/20 bg-base-100 overflow-y-auto">
+      <main class="flex-grow p-4 lg:m-2 lg:mt-0 lg:ml-0 lg:rounded-lg lg:border border-base-content/20 bg-base-100 overflow-y-auto">
         <%= yield %>
       </main>
       <% if signed_in? %>
