--- a/app/views/organizations/memberships/edit.html.erb
+++ b/app/views/organizations/memberships/edit.html.erb
@@ -17,7 +17,7 @@
         </div>
       </div>
 
-      <div class="inline">
+      <div class="flex justify-end">
         <%= form.submit class: "du-btn du-btn-primary" %>
       </div>
     <% end %>
