--- a/app/views/organizations/memberships/new.html.erb
+++ b/app/views/organizations/memberships/new.html.erb
@@ -18,7 +18,7 @@
                             required: true %>
       </div>
 
-      <div class="inline">
+      <div class="flex justify-end">
         <%= form.submit "Invite", class: "du-btn du-btn-primary" %>
       </div>
     <% end %>
