--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -41,7 +41,7 @@
     </div>
   </div>
 
-  <div class="inline">
+  <div class="flex justify-end">
     <%= form.submit class: "du-btn du-btn-primary" %>
   </div>
 <% end %>
