--- a/lib/templates/erb/scaffold/index.html.erb.tt
+++ b/lib/templates/erb/scaffold/index.html.erb.tt
@@ -2,7 +2,7 @@
 
 <%%= render PageComponent.new(title: "<%= human_name.pluralize %>") do |component| %>
   <%% component.with_action_list do %>
-    <%%= link_to "New <%= human_name.downcase %>", new_<%= singular_route_name %>_path, class: "du-btn du-btn-primary" %>
+    <%%= link_to t("shared.actions.new"), new_<%= singular_route_name %>_path, data: { turbo_frame: :modal }, class: "du-btn du-btn-primary" %>
   <%% end %>
 
   <div id="<%= plural_table_name %>" class="space-y-4">
