--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title, t("organizations.index.title") %>
+<% content_for :title, t(".title") %>
 
-<%= render PageComponent.new(title: t("organizations.index.title")) do |component| %>
+<%= render PageComponent.new(title: t(".title")) do |component| %>
   <% component.with_action_list do %>
     <%= link_to t("shared.actions.new"), new_organization_path, data: { turbo_frame: :modal }, class: "du-btn du-btn-primary" %>
   <% end %>
