--- a/app/views/organizations/transfers/show.html.erb
+++ b/app/views/organizations/transfers/show.html.erb
@@ -1,5 +1,5 @@
 <%= modal do %>
-  <%= render PageComponent.new(title: t("organizations.transfers.show.title"), content_container: false, full_width: false) do |component| %>
+  <%= render PageComponent.new(title: t("organizations.transfers.show.title"), full_width: false) do |component| %>
     <%= render "organizations/transfers/form" %>
   <% end %>
 <% end %>
