--- a/app/components/page_component.html.erb
+++ b/app/components/page_component.html.erb
@@ -8,7 +8,7 @@
     </div>
   </div>
 
-  <div class="<%= content_container_class %>">
+  <div class="space-y-4">
     <%= content %>
   </div>
 </section>
