--- a/app/views/organizations/projects/edit.html.erb
+++ b/app/views/organizations/projects/edit.html.erb
@@ -1,9 +1,7 @@
-<div class="mx-auto md:w-2/3 w-full">
-  <%= modal do %>
-    <h1 class="font-bold text-lx lg:text-3xll">Editing project</h1>
+<% content_for :title, "Editing project" %>
 
+<%= modal do %>
+  <%= render PageComponent.new(title: "Editing project") do |component| %>
     <%= render "form", project: @project %>
   <% end %>
-  <%= link_to "Show this project", [ @organization, @project ], class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-  <%= link_to "Back to projects", [ @organization, :projects ], class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-</div>
+<% end %>
