--- a/app/views/organizations/projects/index.html.erb
+++ b/app/views/organizations/projects/index.html.erb
@@ -1,12 +1,11 @@
 <% content_for :title, "Projects" %>
-<div class="w-full">
 
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-lx lg:text-3xll">Projects</h1>
-    <%= link_to "New project", new_organization_project_path(@organization), data: { turbo_frame: :modal }, class: "du-btn du-btn-primary" %>
-  </div>
+<%= render PageComponent.new(title: "Projects") do |component| %>
+  <% component.with_action_list do %>
+    <%= link_to t("shared.actions.new"), new_organization_project_path(@organization), data: { turbo_frame: :modal }, class: "du-btn du-btn-primary" %>
+  <% end %>
 
-  <div id="projects" class="min-w-full">
+  <div id="projects" class="space-y-4">
     <% @projects.each do |project| %>
       <%= render project %>
       <p>
@@ -14,4 +13,4 @@
       </p>
     <% end %>
   </div>
-</div>
+<% end %>
