--- a/app/views/organizations/projects/new.html.erb
+++ b/app/views/organizations/projects/new.html.erb
@@ -1,8 +1,7 @@
-<div class="mx-auto md:w-2/3 w-full">
-  <%= modal do %>
-    <h1 class="font-bold mb-3">New project</h1>
+<% content_for :title, "New project" %>
+
+<%= modal do %>
+  <%= render PageComponent.new(title: "New project") do |component| %>
     <%= render "form", project: @project %>
   <% end %>
-
-  <%= link_to "Back to projects", [ @organization, :projects ], class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-</div>
+<% end %>
