--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, t("organizations.edit.title") %>
 
 <%= modal do %>
-  <%= render PageComponent.new(title: t("organizations.edit.title"), content_container: false, full_width: false) do |component| %>
+  <%= render PageComponent.new(title: t("organizations.edit.title")) do |component| %>
     <%= render "form", organization: @organization %>
   <% end %>
 <% end %>
