--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,11 +1,11 @@
 <% content_for :title, t("organizations.show.title") %>
 
-<%= render PageComponent.new(title: t("organizations.show.title")) do |component| %>
+<%= render PageComponent.new(title: t("organizations.show.title"), full_width: true) do |component| %>
   <% component.with_action_list do %>
-    <%= link_to t("shared.actions.edit"), edit_organization_path(@organization), data: { turbo_frame: :modal }, class: "du-btn du-btn-secondary" if policy(@organization).edit? %>
-    <%= link_to t("organizations.transfers.show.title"), organization_transfer_path(@organization), data: { turbo_frame: :modal }, class: "du-btn du-btn-error" if @organization.can_transfer?(current_user) %>
+    <%= link_to t("shared.actions.edit"), edit_organization_path(@organization), data: { turbo_frame: :modal }, class: "du-btn du-btn-secondary du-btn-sm" if policy(@organization).edit? %>
+    <%= link_to t("organizations.transfers.show.title"), organization_transfer_path(@organization), data: { turbo_frame: :modal }, class: "du-btn du-btn-error du-btn-sm" if @organization.can_transfer?(current_user) %>
     <div class="inline-block">
-      <%= button_to t("shared.actions.destroy"), @organization, method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "du-btn du-btn-error" if policy(@organization).destroy? %>
+      <%= button_to t("shared.actions.destroy"), @organization, method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "du-btn du-btn-error du-btn-sm" if policy(@organization).destroy? %>
     </div>
   <% end %>
 <% end %>
