--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -27,11 +27,11 @@
 
     <% if current_organization %>
       <div class="flex flex-col justify-between max-h-dvh overflow-y-auto space-y-1 max-w-min">
-        <div class="space-y-1 p-2">
+        <div class="du-menu w-full">
           <%= nav_link current_organization.name, organization_path(current_organization), icon: organization_avatar(current_organization, classes: "size-5"), active: :exclusive %>
           <%= render "shared/sidebar_links" %>
         </div>
-        <div class="border-t border-base-content/20 space-y-1 p-2">
+        <div class="du-menu w-full">
           <%= nav_link t("organizations.memberships.index.title"), organization_memberships_path(current_organization), icon: "svg/user-group.svg" %>
           <% if Current.membership.admin? %>
             <%= nav_link t("organizations.subscriptions.index.title"), organization_subscriptions_path(current_organization), icon: subscription_status_label(current_organization) if Rails.application.credentials.dig(:stripe, :private_key).present? %>
@@ -43,10 +43,10 @@
 
     <% if controller_path.start_with?('users') %>
       <div class="flex flex-col justify-between max-h-dvh overflow-y-auto space-y-1 max-w-min">
-        <div class="space-y-1 p-2">
-          <%= nav_link t("shared.navigation.edit_profile"), edit_user_registration_path, icon: "🔐" %>
-          <%= nav_link t("shared.navigation.pending_invitations"), user_invitations_path, icon: current_user.organization_invitations.count.to_s %>
-          <%= nav_link t("shared.navigation.pending_requests"), user_membership_requests_path, icon: current_user.organization_requests.count.to_s %>
+        <div class="du-menu w-full">
+          <%= nav_link t("shared.navigation.edit_profile"), edit_user_registration_path, icon: "svg/cog-6-tooth.svg" %>
+          <%= nav_link t("shared.navigation.pending_invitations"), user_invitations_path, badge: current_user.organization_invitations.count.to_s %>
+          <%= nav_link t("shared.navigation.pending_requests"), user_membership_requests_path, badge: current_user.organization_requests.count.to_s %>
         </div>
       </div>
     <% end %>
