--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -3,7 +3,7 @@
     <div class="du-modal-box space-y-2">
       <div class="flex justify-end">
         <form method="dialog" class="">
-          <button class="du-btn du-btn-ghost du-btn-sm rounded-full leading-none p-0 aspect-square">
+          <button class="du-btn du-btn-ghost du-btn-sm du-btn-circle">
             <%= inline_svg_tag "svg/x-mark.svg", class: "size-4" %>
           </button>        
         </form>
