finally abstract _user_links

--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -41,9 +41,7 @@
       <% end %>
       <% if controller_path.start_with?('users') %>
         <div class="du-menu w-full">
-          <%= nav_link t("shared.navigation.edit_profile"), edit_user_registration_path, icon: "svg/cog-6-tooth.svg" %>
-          <%= nav_link t("shared.navigation.pending_invitations"), user_invitations_path, badge: current_user.organization_invitations.count.to_s %>
-          <%= nav_link t("shared.navigation.pending_requests"), user_membership_requests_path, badge: current_user.organization_requests.count.to_s %>
+          <%= render "shared/user_links" %>
         </div>
       <% end %>
     </div>
