--- a/app/views/shared/_user_links.html.erb
+++ b/app/views/shared/_user_links.html.erb
@@ -1,3 +1,4 @@
 <%= nav_link t("shared.navigation.edit_profile"), edit_user_registration_path, icon: "🔐" %>
-<%= nav_link t("shared.navigation.pending_invitations"), user_invitations_path, badge: current_user.organization_invitations.count.to_s %>
-<%= nav_link t("shared.navigation.pending_requests"), user_membership_requests_path, badge: current_user.organization_requests.count.to_s %>
+<%= nav_link t("shared.navigation.pending_invitations"), user_invitations_path, badge: current_user.organization_invitations.pending.count %>
+<%= nav_link t("shared.navigation.pending_requests"), user_membership_requests_path, badge: current_user.organization_requests.pending.count %>
+<%= nav_link t("shared.navigation.logout"), destroy_user_session_path, data: { turbo_method: :delete, turbo_confirm: t("shared.actions.confirm") } %>
