--- a/app/views/users/invitations/index.html.erb
+++ b/app/views/users/invitations/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, t(".title") %>
 
 <%= render "organizations/tabs", active_tab: :invitations do %>
-  <%= render PageComponent.new(title: t("invitations.index.title")) do |component| %>
+  <%= render PageComponent.new(title: t("invitations.index.title"), full_width: true) do |component| %>
     <div id="invitations" class="space-y-4">
       <% @invitations.each do |invitation| %>
         <%= render invitation, invitation: %>
